Изменён шрифт заголовка

--- a/index.html
+++ b/index.html
@@ -4,6 +4,12 @@
         <title>
             APEX zone finder
         </title>
+            <style>
+                h1{
+                    text-align: center;
+                    font-family: sans-serif;
+                }
+            </style>
     </head>
     <body>
         <h1>APEX zone finder</h1>
