--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
                 
                         display: block;
                         margin-left: auto;
-                        margin-right: auto 
+                        margin-right: auto;
                } 
             </style>
     </head>
