--- a/index.html
+++ b/index.html
@@ -32,12 +32,10 @@
                     background-color: honeydew;
                     opacity: 0.3;
                 }
-                .background{
+                body{
                     
                     background-position: center center;
                     background-attachment: fixed;
-                    height: 1000px;
-                    width: 1000px;
                     background-repeat: no-repeat;
                     z-index: 1;
                     background-size: contain;
@@ -47,7 +45,6 @@
     </head>
     <body>
         <h1>APEX zone finder</h1> 
-               <div class="background"></div>
         <div class="container">
             <div class="row">
                 <div class="colonne"></div>
