--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                 col.setAttribute("data-x", x);
                 col.setAttribute("data-y", y);
                 // col.onclick = mapClick;
-                button.addEventListener('click', mapClick);
+                col.addEventListener('click', mapClick);
                 row.append (col);
             }
 
