--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
             let ss = "data-x" + "data-y"; // "data-xdata-y"
             let x = event.target.getAttribute("data-x");
             let y = event.target.getAttribute("data-y");
-            alert(x+" "+y);
+            alert("X="+x+" "+"Y="+y);
         }
     </script>
 </html>
